miles-common/miles-common-antlr4/src/main/java/self/miles/common/antlr4/mysql/MysqlParser.java
// Generated from D:/workspace/com/miles-self/miles-common/miles-common-antlr4/src/main/resources/Mysql.g4 by ANTLR 4.13.1

    package self.miles.common.antlr4.mysql;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class MysqlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, SCOL=11, DOT=12, OPEN_PAR=13, CLOSE_PAR=14, COMMA=15, ASSIGN=16, 
		STAR=17, PLUS=18, MINUS=19, CREAT_=20, TABLE_=21, IF_=22, NOT_=23, NULL_=24, 
		UNIQUE_=25, CHECK_=26, DEFAULT_=27, EXISTS_=28, WITHOUT_=29, TEMP_=30, 
		TEMPORARY_=31, PRIMARY_=32, KEY_=33, COLLATE_=34, GENERATED_=35, ALWAYS_=36, 
		STORED_=37, VIRTUAL_=38, CONSTRAINT_=39, ABORT_=40, ACTION_=41, ADD_=42, 
		AFTER_=43, ALL_=44, ALTER_=45, ANALYZE_=46, AND_=47, AS_=48, ASC_=49, 
		ATTACH_=50, AUTOINCREMENT_=51, BEFORE_=52, BEGIN_=53, BETWEEN_=54, BY_=55, 
		CASCADE_=56, CASE_=57, CAST_=58, COMMENT_=59, DIGIT=60, LETTER=61, ANYDL=62, 
		STRING_IDEENTIFIRE=63, STRING=64, IDENTIFIER=65, BACKQUOTED_IDENTIFIER=66, 
		SIMPLE_COMMENT=67, BRACKETED_EMPTY_COMMENT=68, BRACKETED_COMMENT=69, WS=70;
	public static final int
		RULE_parse = 0, RULE_sql_stat = 1, RULE_mysql_crt_stmt = 2, RULE_c_table = 3, 
		RULE_c_column = 4, RULE_table_constraint = 5, RULE_column_constraint = 6, 
		RULE_schema_name = 7, RULE_tableName = 8, RULE_column_name = 9, RULE_collation_name = 10, 
		RULE_indexed_column = 11, RULE_commonStr = 12, RULE_type_name = 13, RULE_identifier = 14, 
		RULE_quotedIdentifier = 15, RULE_signed_number = 16, RULE_string = 17, 
		RULE_asc_desc = 18, RULE_conflict_clause = 19, RULE_update_clause = 20, 
		RULE_expr = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"parse", "sql_stat", "mysql_crt_stmt", "c_table", "c_column", "table_constraint", 
			"column_constraint", "schema_name", "tableName", "column_name", "collation_name", 
			"indexed_column", "commonStr", "type_name", "identifier", "quotedIdentifier", 
			"signed_number", "string", "asc_desc", "conflict_clause", "update_clause", 
			"expr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'unsigned'", "'signed'", "'DESC'", "'ON DELETE CASCADE'", "'ON UPDATE CASCADE'", 
			"'ON DELETE SET NULL'", "'ON UPDATE SET NULL'", "'ON UPDATE CURRENT_TIMESTAMP'", 
			"'>'", "'<'", "';'", "'.'", "'('", "')'", "','", "'='", "'*'", "'+'", 
			"'-'", "'CREATE'", "'TABLE'", "'IF'", "'NOT'", "'NULL'", "'UNIQUE'", 
			"'CHECK'", "'DEFAULT'", "'EXISTS'", "'WITHOUT'", "'TEMP'", "'TEMPORARY'", 
			"'PRIMARY'", "'KEY'", "'COLLATE'", "'GENERATED'", "'ALWAYS'", "'STORED'", 
			"'VIRTUAL'", "'CONSTRAINT'", "'ABORT'", "'ACTION'", "'ADD'", "'AFTER'", 
			"'ALL'", "'ALTER'", "'ANALYZE'", "'AND'", "'AS'", "'ASC'", "'ATTACH'", 
			"'AUTO_INCREMENT'", "'BEFORE'", "'BEGIN'", "'BETWEEN'", "'BY'", "'CASCADE'", 
			"'CASE'", "'CAST'", "'COMMENT'", null, null, null, null, null, null, 
			null, null, "'/**/'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, "SCOL", 
			"DOT", "OPEN_PAR", "CLOSE_PAR", "COMMA", "ASSIGN", "STAR", "PLUS", "MINUS", 
			"CREAT_", "TABLE_", "IF_", "NOT_", "NULL_", "UNIQUE_", "CHECK_", "DEFAULT_", 
			"EXISTS_", "WITHOUT_", "TEMP_", "TEMPORARY_", "PRIMARY_", "KEY_", "COLLATE_", 
			"GENERATED_", "ALWAYS_", "STORED_", "VIRTUAL_", "CONSTRAINT_", "ABORT_", 
			"ACTION_", "ADD_", "AFTER_", "ALL_", "ALTER_", "ANALYZE_", "AND_", "AS_", 
			"ASC_", "ATTACH_", "AUTOINCREMENT_", "BEFORE_", "BEGIN_", "BETWEEN_", 
			"BY_", "CASCADE_", "CASE_", "CAST_", "COMMENT_", "DIGIT", "LETTER", "ANYDL", 
			"STRING_IDEENTIFIRE", "STRING", "IDENTIFIER", "BACKQUOTED_IDENTIFIER", 
			"SIMPLE_COMMENT", "BRACKETED_EMPTY_COMMENT", "BRACKETED_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Mysql.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MysqlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParseContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(MysqlParser.EOF, 0); }
		public Sql_statContext sql_stat() {
			return getRuleContext(Sql_statContext.class,0);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MysqlListener ) ((MysqlListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MysqlListener ) ((MysqlListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MysqlVisitor ) return ((MysqlVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(44);
			sql_stat();
			}
			setState(45);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Sql_statContext extends ParserRuleContext {
		public Mysql_crt_stmtContext mysql_crt_stmt() {
			return getRuleContext(Mysql_crt_stmtContext.class,0);
		}
		public Sql_statContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sql_stat; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MysqlListener ) ((MysqlListener)listener).enterSql_stat(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MysqlListener ) ((MysqlListener)listener).exitSql_stat(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MysqlVisitor ) return ((MysqlVisitor<? extends T>)visitor).visitSql_stat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Sql_statContext sql_stat() throws RecognitionException {
		Sql_statContext _localctx = new Sql_statContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sql_stat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(47);
			mysql_crt_stmt();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Mysql_crt_stmtContext extends ParserRuleContext {
		public Token row_ROW_ID;
		public C_tableContext c_table() {
			return getRuleContext(C_tableContext.class,0);
		}
		public TerminalNode OPEN_PAR() { return getToken(MysqlParser.OPEN_PAR, 0); }
		public List<C_columnContext> c_column() {
			return getRuleContexts(C_columnContext.class);
		}
		public C_columnContext c_column(int i) {
			return getRuleContext(C_columnContext.class,i);
		}
		public TerminalNode CLOSE_PAR() { return getToken(MysqlParser.CLOSE_PAR, 0); }
		public List<TerminalNode> COMMA() { return getTokens(MysqlParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MysqlParser.COMMA, i);
		}
		public List<Table_constraintContext> table_constraint() {
			return getRuleContexts(Table_constraintContext.class);
		}
		public Table_constraintContext table_constraint(int i) {
			return getRuleContext(Table_constraintContext.class,i);
		}
		public TerminalNode WITHOUT_() { return getToken(MysqlParser.WITHOUT_, 0); }
		public TerminalNode IDENTIFIER() { return getToken(MysqlParser.IDENTIFIER, 0); }
		public Mysql_crt_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mysql_crt_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MysqlListener ) ((MysqlListener)listener).enterMysql_crt_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MysqlListener ) ((MysqlListener)listener).exitMysql_crt_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MysqlVisitor ) return ((MysqlVisitor<? extends T>)visitor).visitMysql_crt_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Mysql_crt_stmtContext mysql_crt_stmt() throws RecognitionException {
		Mysql_crt_stmtContext _localctx = new Mysql_crt_stmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_mysql_crt_stmt);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			c_table();
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OPEN_PAR) {
				{
				setState(50);
				match(OPEN_PAR);
				setState(51);
				c_column();
				setState(56);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1+1 ) {
						{
						{
						setState(52);
						match(COMMA);
						setState(53);
						c_column();
						}
						} 
					}
					setState(58);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(59);
					match(COMMA);
					setState(60);
					table_constraint();
					}
					}
					setState(65);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(66);
				match(CLOSE_PAR);
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==WITHOUT_) {
					{
					setState(67);
					match(WITHOUT_);
					setState(68);
					((Mysql_crt_stmtContext)_localctx).row_ROW_ID = match(IDENTIFIER);
					}
				}

				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class C_tableContext extends ParserRuleContext {
		public TerminalNode CREAT_() { return getToken(MysqlParser.CREAT_, 0); }
		public TerminalNode TABLE_() { return getToken(MysqlParser.TABLE_, 0); }
		public TableNameContext tableName() {
			return getRuleContext(TableNameContext.class,0);
		}
		public TerminalNode IF_() { return getToken(MysqlParser.IF_, 0); }
		public TerminalNode NOT_() { return getToken(MysqlParser.NOT_, 0); }
		public TerminalNode EXISTS_() { return getToken(MysqlParser.EXISTS_, 0); }
		public Schema_nameContext schema_name() {
			return getRuleContext(Schema_nameContext.class,0);
		}
		public TerminalNode DOT() { return getToken(MysqlParser.DOT, 0); }
		public TerminalNode TEMP_() { return getToken(MysqlParser.TEMP_, 0); }
		public TerminalNode TEMPORARY_() { return getToken(MysqlParser.TEMPORARY_, 0); }
		public C_tableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_c_table; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MysqlListener ) ((MysqlListener)listener).enterC_table(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MysqlListener ) ((MysqlListener)listener).exitC_table(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MysqlVisitor ) return ((MysqlVisitor<? extends T>)visitor).visitC_table(this);
			else return visitor.visitChildren(this);
		}
	}

	public final C_tableContext c_table() throws RecognitionException {
		C_tableContext _localctx = new C_tableContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_c_table);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(CREAT_);
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==TEMP_ || _la==TEMPORARY_) {
				{
				setState(74);
				_la = _input.LA(1);
				if ( !(_la==TEMP_ || _la==TEMPORARY_) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(77);
			match(TABLE_);
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IF_) {
				{
				setState(78);
				match(IF_);
				setState(79);
				match(NOT_);
				setState(80);
				match(EXISTS_);
				}
			}

			setState(86);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(83);
				schema_name();
				setState(84);
				match(DOT);
				}
				break;
			}
			setState(88);
			tableName();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class C_columnContext extends ParserRuleContext {
		public Column_nameContext column_name() {
			return getRuleContext(Column_nameContext.class,0);
		}
		public Type_nameContext type_name() {
			return getRuleContext(Type_nameContext.class,0);
		}
		public List<Column_constraintContext> column_constraint() {
			return getRuleContexts(Column_constraintContext.class);
		}
		public Column_constraintContext column_constraint(int i) {
			return getRuleContext(Column_constraintContext.class,i);
		}
		public TerminalNode COMMENT_() { return getToken(MysqlParser.COMMENT_, 0); }
		public CommonStrContext commonStr() {
			return getRuleContext(CommonStrContext.class,0);
		}
		public C_columnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_c_column; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MysqlListener ) ((MysqlListener)listener).enterC_column(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MysqlListener ) ((MysqlListener)listener).exitC_column(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MysqlVisitor ) return ((MysqlVisitor<? extends T>)visitor).visitC_column(this);
			else return visitor.visitChildren(this);
		}
	}

	public final C_columnContext c_column() throws RecognitionException {
		C_columnContext _localctx = new C_columnContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_c_column);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			column_name();
			setState(91);
			type_name();
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__0 || _la==T__1) {
				{
				setState(92);
				_la = _input.LA(1);
				if ( !(_la==T__0 || _la==T__1) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2533330885017600L) != 0)) {
				{
				{
				setState(95);
				column_constraint();
				}
				}
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMENT_) {
				{
				setState(101);
				match(COMMENT_);
				setState(102);
				commonStr();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Table_constraintContext extends ParserRuleContext {
		public TerminalNode OPEN_PAR() { return getToken(MysqlParser.OPEN_PAR, 0); }
		public List<Indexed_columnContext> indexed_column() {
			return getRuleContexts(Indexed_columnContext.class);
		}
		public Indexed_columnContext indexed_column(int i) {
			return getRuleContext(Indexed_columnContext.class,i);
		}
		public TerminalNode CLOSE_PAR() { return getToken(MysqlParser.CLOSE_PAR, 0); }
		public TerminalNode CHECK_() { return getToken(MysqlParser.CHECK_, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode CONSTRAINT_() { return getToken(MysqlParser.CONSTRAINT_, 0); }
		public IdentifierContext identifier() {
			return getRuleContext(IdentifierContext.class,0);
		}
		public TerminalNode PRIMARY_() { return getToken(MysqlParser.PRIMARY_, 0); }
		public TerminalNode KEY_() { return getToken(MysqlParser.KEY_, 0); }
		public TerminalNode UNIQUE_() { return getToken(MysqlParser.UNIQUE_, 0); }
		public List<TerminalNode> COMMA() { return getTokens(MysqlParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MysqlParser.COMMA, i);
		}
		public Conflict_clauseContext conflict_clause() {
			return getRuleContext(Conflict_clauseContext.class,0);
		}
		public Table_constraintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_table_constraint; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MysqlListener ) ((MysqlListener)listener).enterTable_constraint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MysqlListener ) ((MysqlListener)listener).exitTable_constraint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MysqlVisitor ) return ((MysqlVisitor<? extends T>)visitor).visitTable_constraint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Table_constraintContext table_constraint() throws RecognitionException {
		Table_constraintContext _localctx = new Table_constraintContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_table_constraint);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CONSTRAINT_) {
				{
				setState(105);
				match(CONSTRAINT_);
				setState(106);
				identifier();
				}
			}

			setState(132);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case UNIQUE_:
			case PRIMARY_:
				{
				setState(112);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case PRIMARY_:
					{
					setState(109);
					match(PRIMARY_);
					setState(110);
					match(KEY_);
					}
					break;
				case UNIQUE_:
					{
					setState(111);
					match(UNIQUE_);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(114);
				match(OPEN_PAR);
				setState(115);
				indexed_column();
				setState(120);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(116);
					match(COMMA);
					setState(117);
					indexed_column();
					}
					}
					setState(122);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(123);
				match(CLOSE_PAR);
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 240L) != 0)) {
					{
					setState(124);
					conflict_clause();
					}
				}

				}
				break;
			case CHECK_:
				{
				setState(127);
				match(CHECK_);
				setState(128);
				match(OPEN_PAR);
				setState(129);
				expr();
				setState(130);
				match(CLOSE_PAR);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Column_constraintContext extends ParserRuleContext {
		public TerminalNode PRIMARY_() { return getToken(MysqlParser.PRIMARY_, 0); }
		public TerminalNode KEY_() { return getToken(MysqlParser.KEY_, 0); }
		public Asc_descContext asc_desc() {
			return getRuleContext(Asc_descContext.class,0);
		}
		public Conflict_clauseContext conflict_clause() {
			return getRuleContext(Conflict_clauseContext.class,0);
		}
		public TerminalNode AUTOINCREMENT_() { return getToken(MysqlParser.AUTOINCREMENT_, 0); }
		public TerminalNode NULL_() { return getToken(MysqlParser.NULL_, 0); }
		public TerminalNode UNIQUE_() { return getToken(MysqlParser.UNIQUE_, 0); }
		public TerminalNode NOT_() { return getToken(MysqlParser.NOT_, 0); }
		public TerminalNode CHECK_() { return getToken(MysqlParser.CHECK_, 0); }
		public TerminalNode OPEN_PAR() { return getToken(MysqlParser.OPEN_PAR, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode CLOSE_PAR() { return getToken(MysqlParser.CLOSE_PAR, 0); }
		public TerminalNode DEFAULT_() { return getToken(MysqlParser.DEFAULT_, 0); }
		public Signed_numberContext signed_number() {
			return getRuleContext(Signed_numberContext.class,0);
		}
		public TerminalNode LETTER() { return getToken(MysqlParser.LETTER, 0); }
		public Update_clauseContext update_clause() {
			return getRuleContext(Update_clauseContext.class,0);
		}
		public TerminalNode COLLATE_() { return getToken(MysqlParser.COLLATE_, 0); }
		public Collation_nameContext collation_name() {
			return getRuleContext(Collation_nameContext.class,0);
		}
		public TerminalNode AS_() { return getToken(MysqlParser.AS_, 0); }
		public TerminalNode GENERATED_() { return getToken(MysqlParser.GENERATED_, 0); }
		public TerminalNode ALWAYS_() { return getToken(MysqlParser.ALWAYS_, 0); }
		public TerminalNode STORED_() { return getToken(MysqlParser.STORED_, 0); }
		public TerminalNode VIRTUAL_() { return getToken(MysqlParser.VIRTUAL_, 0); }
		public Column_constraintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_column_constraint; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MysqlListener ) ((MysqlListener)listener).enterColumn_constraint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MysqlListener ) ((MysqlListener)listener).exitColumn_constraint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MysqlVisitor ) return ((MysqlVisitor<? extends T>)visitor).visitColumn_constraint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Column_constraintContext column_constraint() throws RecognitionException {
		Column_constraintContext _localctx = new Column_constraintContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_column_constraint);
		int _la;
		try {
			setState(186);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case PRIMARY_:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(134);
				match(PRIMARY_);
				setState(135);
				match(KEY_);
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__2 || _la==ASC_) {
					{
					setState(136);
					asc_desc();
					}
				}

				setState(140);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 240L) != 0)) {
					{
					setState(139);
					conflict_clause();
					}
				}

				setState(143);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,17,_ctx) ) {
				case 1:
					{
					setState(142);
					match(AUTOINCREMENT_);
					}
					break;
				}
				}
				}
				break;
			case AUTOINCREMENT_:
				enterOuterAlt(_localctx, 2);
				{
				setState(145);
				match(AUTOINCREMENT_);
				}
				break;
			case NOT_:
			case NULL_:
			case UNIQUE_:
				enterOuterAlt(_localctx, 3);
				{
				setState(151);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case NOT_:
				case NULL_:
					{
					setState(147);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==NOT_) {
						{
						setState(146);
						match(NOT_);
						}
					}

					setState(149);
					match(NULL_);
					}
					break;
				case UNIQUE_:
					{
					setState(150);
					match(UNIQUE_);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(154);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 240L) != 0)) {
					{
					setState(153);
					conflict_clause();
					}
				}
